--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "essinc-au-homepage",
+  "name": "essasiapacific-au-homepage",
   "version": "0.1.0",
   "devDependencies": {
     "autoprefixer-core": "^6.0.1",
